<resources>
    <string name="app_name">Tabulation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_signin">SIGN IN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="menu_events">Events</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_rate">Ratings</string>
    <string name="menu_about">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">&#160;&#160;Email</string>
    <string name="prompt_password">&#160;&#160;Password</string>
    <string name="prompt_inputscore">Input Score</string>

    <string name="title_activity_contestants">ContestantsActivity</string>
    <string name="title_activity_criteria">CriteriaActivity</string>
    <string name="title_activity_viewresults">CriteriaActivity</string>

    <string name="event_name">Event Name</string>

    <string-array name="categories">
        <item>Select Category</item>
        <item>Just Two Minutes</item>
        <item>Debate</item>
        <item>Speech Reading</item>
    </string-array>


</resources>
